<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="backspace">Bks</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sign">+/-</string>
    <string name="zero">0</string>
    <string name="dot">,</string>
    <string name="result">=</string>
    <string name="basic">Basic</string>
    <string name="sience">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="percent">%</string>
    <string name="sqrt">√x</string>
    <string name="squared">x²</string>
    <string name="toThePower">x^y</string>
    <string name="cube">x³</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="strong">x!</string>
    <string name="e">e</string>
    <string name="Pi">π</string>

</resources>
