<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="6"
    style="@style/background"
    >



    <Button
        android:id="@+id/btn_clear"
        style="@style/Function_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/clear"

        />
    <Button
        android:id="@+id/btn_division"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/division"
        />
    <Button
        android:id="@+id/btn_multiply"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/multiply"
        />
    <Button
        android:id="@+id/btn_backspace"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/backspace"
        />
    <Button
        android:id="@+id/btn_seven"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/seven"
        />
    <Button
        android:id="@+id/btn_eight"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/eight"
        />
    <Button
        android:id="@+id/btn_nine"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/nine"
        />
    <Button
        android:id="@+id/btn_substraction"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/subtraction"

        />
    <Button
        android:id="@+id/btn_four"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/four"
        />
    <Button
        android:id="@+id/btn_five"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/five"
        />
    <Button
        android:id="@+id/btn_six"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/six"
        />
    <Button
        android:id="@+id/btn_addition"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/addition"
        />
    <Button
        android:id="@+id/btn_one"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/one"
        />
    <Button
        android:id="@+id/btn_two"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/two"
        />
    <Button
        android:id="@+id/btn_three"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/three"
        />
    <Button
        android:id="@+id/btn_result"
        style="@style/Result_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_rowSpan="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="fill_vertical"
        android:text="@string/result"

        />
    <Button
        android:id="@+id/btn_sign"
        style="@style/Function_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/sign"
        />

    <Button
        android:id="@+id/btn_zero"
        style="@style/Number_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/zero"
        />
    <Button
        android:id="@+id/btn_dot"
        style="@style/Function_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/dot"
        />


</GridLayout>