<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="5"
    android:layout_column="7"
    style="@style/background"
    >
    <Button
        android:id="@+id/btn_openBracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickOpenBracket"
        android:text="@string/openBracket"
        />
    <Button
        android:id="@+id/btn_closeBracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickCloseBracket"
        android:text="@string/closeBracket"
        />
    <Button
        android:id="@+id/btn_strong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickStrong"
        android:text="@string/strong"
        />
    <Button
        android:id="@+id/btn_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickE"
        android:text="@string/e"
        />
    <Button
        android:id="@+id/btn_Pi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickPi"
        android:text="@string/Pi"
        />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickPercent"
        android:text="@string/percent"
        />
    <Button
        android:id="@+id/btn_sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickSin"
        android:text="@string/sin"
        />
    <Button
        android:id="@+id/btn_sqrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickSqrt"
        android:text="@string/sqrt"
        />
    <Button
        android:id="@+id/btn_cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickCos"
        android:text="@string/cos"
        />
    <Button
        android:id="@+id/btn_squared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickSquared"
        android:text="@string/squared"
        />
    <Button
        android:id="@+id/btn_tan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickTan"
        android:text="@string/tan"
        />
    <Button
        android:id="@+id/btn_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickPower"
        android:text="@string/toThePower"
        />
    <Button
        android:id="@+id/btn_ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickLn"
        android:text="@string/ln"
        />

    <Button
        android:id="@+id/btn_cube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickCube"
        android:text="@string/cube"
        />
    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        style="@style/Function_Button_Science"
        android:onClick="onClickLog"
        android:text="@string/log"
        />

    <Button
        android:id="@+id/btn_clear"
        style="@style/Function_Button_Basic_Land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/clear"

        />
    <Button
        android:id="@+id/btn_division"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_row="0"
        android:layout_column="4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/division"
        />
    <Button
        android:id="@+id/btn_multiply"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/multiply"
        />
    <Button
        android:id="@+id/btn_backspace"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="6"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/backspace"
        />
    <Button
        android:id="@+id/btn_seven"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/seven"
        />
    <Button
        android:id="@+id/btn_eight"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/eight"
        />
    <Button
        android:id="@+id/btn_nine"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/nine"
        />
    <Button
        android:id="@+id/btn_substraction"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_column="6"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/subtraction"

        />
    <Button
        android:id="@+id/btn_four"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/four"
        />
    <Button
        android:id="@+id/btn_five"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/five"
        />
    <Button
        android:id="@+id/btn_six"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/six"
        />
    <Button
        android:id="@+id/btn_addition"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="6"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/addition"
        />
    <Button
        android:id="@+id/btn_one"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/one"
        />
    <Button
        android:id="@+id/btn_two"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/two"
        />
    <Button
        android:id="@+id/btn_three"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/three"
        />
    <Button
        android:id="@+id/btn_result"
        style="@style/Result_Button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="6"
        android:layout_rowSpan="2"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_gravity="fill_vertical"
        android:text="@string/result"

        />
    <Button
        android:id="@+id/btn_sign"
        style="@style/Function_Button_Basic_Land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/sign"
        />

    <Button
        android:id="@+id/btn_zero"
        style="@style/Number_Button_Science"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="4"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/zero"
        />
    <Button
        android:id="@+id/btn_dot"
        style="@style/Function_Button_Basic_Land"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="5"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/dot"
        />



</GridLayout>