<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".MainActivity"

    >
    <Button
        android:id="@+id/btn_calculator"
        style="@style/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btn_about"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:onClick="onClickCalculator"/>
    <Button
        android:id="@+id/btn_about"
        style="@style/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/about"
        android:textSize="32sp"
        android:onClick="onClickAbout"/>
    <Button
        android:id="@+id/btn_exit"
        style="@style/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_about"
        android:text="@string/exit"
        android:textSize="32sp"
        android:onClick="onClickExit"/>

</RelativeLayout>